--- a/common-configuration/bintray.gradle
+++ b/common-configuration/bintray.gradle
@@ -75,7 +75,7 @@ publishing {
 
     repositories {
         maven {
-            url = "../repos"
+            url = "../../repos"
         }
     }
 }
